kubernetes/metric-as-websockets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-as-websocket
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"

spec:
  replicas: 2

  selector:
    matchLabels:
      deploy: metrics-as-websocket

  template:
    metadata:
      labels:
        deploy: metrics-as-websocket
    spec:
      containers:
        - name: metrics-as-websocket
          image: gcr.io/distributed-systems-279515/metric-as-websockets:2
